<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="197dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vivo" />

    <TextView
        android:id="@+id/mrtName"
        android:layout_width="232dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/nearest_mrt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/address"
        android:textColor="#5629A2"
        app:layout_constraintEnd_toStartOf="@+id/googleMaps"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/location_nearest_mrt"
        android:textColor="#5629A2"
        app:layout_constraintEnd_toStartOf="@+id/mrtName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/googleMaps"
        android:layout_width="299dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:text="Click for Google Maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mrtName" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="88dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="@string/time_period"
        android:textColor="#5629A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/timePeriod"
        android:layout_width="287dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/insert_time_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/googleMaps" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="41dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/price"
        android:textColor="#5629A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewdura" />

    <TextView
        android:id="@+id/price"
        android:layout_width="328dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Free"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/durationTextView" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tags"
        android:textColor="#5629A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="383dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/reviews"
        android:textColor="#6A34CA"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <ListView
        android:id="@+id/reviewsList"
        android:layout_width="388dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/leaveReviewButton"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Leave a Review"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollViewTag"
        android:layout_width="341dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tagTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#Outdoor #Friends #Romance #Family #Indoor #Lover #Solo #Life"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="398dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textviewdura"
        android:layout_width="61dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:text="Duration:"
        android:textColor="#673AB7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="298dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="11am - 12pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textviewdura"
        app:layout_constraintTop_toBottomOf="@+id/timePeriod" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="262dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/activityNameTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="cursive"
                android:text="Activity Name"
                android:textColor="#9C27B0"
                android:textSize="34sp" />
        </LinearLayout>
    </HorizontalScrollView>


</android.support.constraint.ConstraintLayout>